basic css styling and html, now moving to JS

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
     <title>The Odin Project: Restaurant Project</title>
 </head>
 <body>
+    <div class="container">
     <header>
         <nav>
             <button id="home">Home</button>
@@ -15,8 +16,17 @@
     </header>
 
     <main>
-        <div id="content"></div>
+        <div id="content">
+            <h1>Porta Tapas - Manchester</h1>
+            <p>The menu represents many tapas bar classics, with additional daily specials. Our team of chefs prepare everything from scratch using top-quality ingredients imported from some of the very best producers in Spain.</p>
+            <p>Simply put, Porta is the kind of place to relax in - unpretentious and comfortable with good music, beer, wine and food.</p>
+            <img src="assets/langostinos.png">
+
+
+
+        </div>
     </main>
+</div>
     
 </body>
 </html>
