completed, added notes for future reference

--- a/src/template.html
+++ b/src/template.html
@@ -9,9 +9,9 @@
     <div class="container">
     <header>
         <nav>
-            <button id="home">Home</button>
-            <button id="menu">Menu</button>
-            <button id="about">About</button>
+            <button id="home" class="btn">Home</button>
+            <button id="menu" class="btn">Menu</button>
+            <button id="about" class="btn">About</button>
         </nav>
     </header>
 
